--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "crowdfundingback",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^18.11.9",
-    "nodemon": "^2.0.20",
-    "prisma": "^4.6.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
-  },
-  "dependencies": {
-    "@prisma/client": "^4.6.1",
-    "express": "^4.18.2"
-  }
+	"name": "crowdfundingback",
+	"version": "1.0.0",
+	"prisma": {
+		"seed": "ts-node prisma/seed.ts"
+	},
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "ts-node-dev --respawn src/index.ts ",
+		"dev": "nodemon src/index.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/express": "^4.17.14",
+		"@types/node": "^18.11.9",
+		"nodemon": "^2.0.20",
+		"prisma": "^4.6.1",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.3"
+	},
+	"dependencies": {
+		"@prisma/client": "^4.6.1",
+		"express": "^4.18.2",
+		"ts-node-dev": "^2.0.0"
+	}
 }
